# rustup-server

./: .gitignore  404.html  Cargo.toml  README.md  index.html  log.txt
checkpoint1/: index.html
checkpoint2/: main.rs
checkpoints/: 1.md  2.md  3.md  4.md  5.md
oldfiles/: main.rs
src/: endpoints.rs  logfetch.rs  main.rs
