[package]
name = "rustup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
tera = "1.12.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.112"
log = "0.4.14"
simple_logger = "4.0.0"